# Rxt

./: .clang-format  CMakeLists.txt  README.md  TODO.org  build.sh
cmake/: CMakeLists.txt  RxtBaseConfig.cmake.in  RxtConfig.cmake.in  RxtDataConfig.cmake.in  RxtEmscriptenHelpers.cmake  RxtFunctions.cmake  RxtGeometryConfig.cmake.in  RxtGraphicsConfig.cmake.in
data/shader/: colored_triangle_3D.frag  colored_triangle_3D.vert  grid_quad.geom  grid_quad.vert  grid_quad_2D.frag  grid_quad_2D.geom  grid_quad_2D.geom.old  grid_quad_2D.vert  grid_quad_sprite_2D.frag  grid_quad_sprite_2D.vert  grid_quad_texture_2D.frag  grid_quad_texture_2D.vert  grid_viewer.frag  grid_viewer.vert  solid_color_3D.frag  solid_color_3D.vert  texture_quad.vert  texture_quad_2D.frag  texture_quad_2D.vert  webgl_grid_quad_2D.frag  webgl_grid_quad_2D.vert
example/: CMakeLists.txt  geom_viewer.cpp  geom_viewer.hpp  grid_context.hpp  grid_space.hpp  grid_viewer.cpp  grid_world.cpp  grid_world.hpp  sdl_basic.cpp  sdl_events.cpp  sdl_shader.cpp  sprites.cpp
src/Rxt/: CMakeLists.txt  _debug.hpp  _fmt.hpp  _glm.hpp  _testing.hpp  camera.hpp  camera.test.cpp  color.hpp  color.test.cpp  controls.hpp  demangle.cpp  demangle.test.cpp  error.hpp  format.hpp  io.hpp  io.test.cpp  loader.hpp  log.hpp  log.test.cpp  macro.hpp  macro.test.cpp  math.hpp  math.test.cpp  meta.hpp  meta.test.cpp  misc.hpp  range.hpp  range.test.cpp  reactive.hpp  runtime.hpp  span.hpp  time.hpp  time.test.cpp  util.hpp  vec.hpp  vec.test.cpp  vec_io.hpp  vec_io.test.cpp  viewport.hpp
src/Rxt/data/: CMakeLists.txt  _test_spatial_map.hpp  _test_util.hpp  bounding_box.hpp  graph.hpp  graph.test.cpp  graph_search.hpp  graph_search.test.cpp  grid.hpp  grid.test.cpp  grid_graph.hpp  grid_graph.test.cpp  grid_hash.hpp  grid_hash.test.cpp  quadtree.hpp  quadtree.test.cpp
src/Rxt/demo/: CMakeLists.txt  easy_sdl.cpp  geom_viewer.cpp  geom_viewer.hpp  grid_context.hpp  grid_space.hpp  grid_viewer.cpp  grid_world.cpp  grid_world.hpp  sdl_basic.cpp  sdl_events.cpp  sdl_shader.cpp
src/Rxt/demo/gridquest/: CMakeLists.txt  main.cpp  main_context.hpp
src/Rxt/demo/gridworld/: CMakeLists.txt  main.cpp  main_context.hpp  space.hpp
src/Rxt/geometry/: CMakeLists.txt  constants.hpp  helper.hpp  icosphere.hpp  icosphere.test.cpp  mesh_traits.hpp  mesh_transform.hpp  ray_distance.hpp  ray_distance.test.cpp  segment_between.hpp  shapes.hpp  shapes.test.cpp  surface.hpp  triangle_primitive.hpp  util.hpp
src/Rxt/geometry/geom_marid/: apparent_distance.hpp
src/Rxt/graphics/: CMakeLists.txt  _gl_debug.hpp  _sdl_debug.hpp  animation.hpp  animation.test.cpp  animation_util.cpp  animation_util.hpp  asset.hpp  camera.cpp  camera.hpp  camera.test.cpp  color.hpp  color.test.cpp  gl.cpp  gl.hpp  gl_core.cpp  gl_core.hpp  gl_data.cpp  gl_data.hpp  gl_error.hpp  gl_guard.hpp  gl_handy.cpp  gl_handy.hpp  gl_loader.cpp  gl_loader.hpp  gl_prelude.hpp  glm.hpp  image.cpp  image.hpp  images.hpp  loader.cpp  loader.hpp  reactive.hpp  sdl.hpp  sdl.test.cpp  sdl_core.hpp  sdl_events.hpp  sdl_gl.hpp  sdl_gui.hpp  sdl_input.cpp  (+4 more)
src/Rxt/graphics/sdl/: reactive.hpp
src/Rxt/graphics/shader/: colored_triangle_3D.hpp  grid_quad.hpp  grid_quad_2D.hpp  grid_quad_sprite_2D.hpp  grid_quad_texture_2D.hpp  solid_color.hpp  solid_color_3D.hpp  texture_quad.hpp  texture_quad_2D.hpp  webgl_grid_quad_2D.hpp
src/Rxt/meta/: CMakeLists.txt  constructor.hpp  demangle.hpp
src/Rxt/reflect/: CMakeLists.txt  demangle.hpp  demangle.test.cpp
